# VideoAgent

./: .env.example  .gitignore  CLAUDE.md  LICENSE  LongVideoEditAgent_DESIGN.md  Makefile  README.md  conftest.py  note.txt  pyproject.toml  requirements.txt
.github/workflows/: test.yml
Maestro/: .env.example  COMPARISON.md  DATAFLOW.md  Dockerfile  IMPROVEMENTS.md  PHYSICS_LITERATURE_REVIEW.md  README.md  REPORT_AND_INSTRUCTIONS.md  RESEARCH_MEMORY_SKILL.md  pyproject.toml  requirements.txt
Maestro/configs/: basic.yaml  default.yaml  server.yaml
Maestro/docs/: INNOVATIONS_v0.4.md
Maestro/docs/research/: INNOVATION_PLAN_2026_06.md  survey_memory_2026_06.md  survey_physics_2026_06.md  survey_self_improve_2026_06.md  survey_skills_audio_2026_06.md  univa_engineering_map.md
Maestro/scripts/: run_pipeline.py  test_orchestrator.py  test_real_backends.py  test_review_improve.py
Maestro/src/maestro/: __init__.py  cli.py  config.py  embeddings.py  logging_utils.py  server.py  trajectory.py  types.py
Maestro/src/maestro/agents/: __init__.py  act.py  base.py  capability_router.py  defect_report.py  director.py  generator.py  orchestrator.py  physics_planner.py  plan_validator.py  refiner.py  repair_router.py  screenwriter.py  verifier.py
Maestro/src/maestro/critics/: __init__.py  base.py  board.py  consistency.py  physics.py  physics_consistency.py  rhythm.py  semantic.py  tournament.py
Maestro/src/maestro/memory/: __init__.py  entity_store.py  episodic_store.py  lesson_library.py  multi_layer.py  preference_store.py  skill_admission.py  skill_library.py  write_gate.py
Maestro/src/maestro/models/: __init__.py  audio_gen_backends.py  detection_backends.py  image_edit.py  llm.py  llm_backends.py  mllm.py  mllm_backends.py  mock_signals.py  video_gen.py  video_gen_backends.py  world_reward.py
Maestro/src/maestro/orchestration/: __init__.py  state.py
Maestro/src/maestro/physics/: __init__.py  annotate.py  control_render.py  failure_modes.py  laws.py  oracle.py  reliability.py  router.py  sim_wrapper.py  sketch.py  track_extractor_backends.py  tracks.py  verifier.py
Maestro/src/maestro/pipeline/: __init__.py  assemble.py  generate_loop.py  plan.py  run.py  timeline.py  understand.py
Maestro/src/maestro/planning/: __init__.py  event_graph.py
Maestro/src/maestro/prompts/: director.txt  orchestrator.txt  physics_critic.txt  refiner.txt  screenwriter.txt  semantic_critic.txt
Maestro/src/maestro/tools/: __init__.py  assembly_tool.py  audio_gen.py  base.py  captioning.py  detection.py  frame_extract.py  image_ops.py  metric_tool.py  retrieval_tool.py  video_concat.py  video_probe.py
Maestro/tests/integration/: test_deep_paths.py  test_end_to_end.py  test_internal_audits.py  test_v03_e2e.py
Maestro/tests/unit/: test_audio_gen_backends.py  test_audit_fixes.py  test_capability_router.py  test_defect_report.py  test_detection_backends.py  test_entity_memory.py  test_hsi_and_consistency.py  test_lesson_library.py  test_llm_backends.py  test_memory_tiers.py  test_mllm_backends.py  test_orchestrator.py  test_physics.py  test_physics_laws.py  test_physics_oracle.py  test_physics_verifier.py  test_planning.py  test_propagation.py  test_repair_router.py  test_self_improve.py  test_server.py  test_skill_library.py  test_skill_lifecycle.py  test_timeline.py  test_tools_and_act.py  test_tournament_retrieval.py  test_track_extractor.py  test_video_gen_backends.py
benchmark/: __init__.py  cine_bench.py  mashup_bench.py  metrics.py
configs/: default.yaml  instructions.example.yaml
configs/agents/: director.yaml  editor.yaml  orchestrator.yaml  screenwriter.yaml  validator.yaml
configs/heuristics/: presets.yaml
configs/models/: llm.yaml  mllm.yaml  perception.yaml  video_gen.yaml
crewai/: play.py
docs/: AGENTIC_RL_PROPOSAL.md  AUDIT_REPORT.md  BASELINE_v0_2.md  BRANCH_RECOVERY.md  CRITICAL_REVIEW.md  CSA_FRAMEWORK.md  ON_POLICY_DISTILLATION_ANALYSIS.md  REFERENCES_2024_2025.md  REFERENCES_2024_2026.md  RL_BRANCH_SUMMARY.md  SERVER_RUN.md  SYSTEM_GUIDE.md  architecture_tour.md  decisions.md  dependencies.md
scripts/: build_memory.py  eval_benchmark.py  measure_baseline.py  preprocess_video.py  run_pipeline.py  server_run.py  visualize_trajectory.py
src/longvideoagent/: __init__.py  cli.py  config.py  logging.py  scripts_impl.py  types.py
src/longvideoagent/agents/: __init__.py  base.py  critic.py  director.py  editor.py  orchestrator.py  screenwriter.py  validator.py
src/longvideoagent/memory/: __init__.py  builder.py  lessons.py  retriever.py  schema.py  store.py
src/longvideoagent/models/: __init__.py
src/longvideoagent/orchestration/: __init__.py  graph.py  messages.py  state.py
src/longvideoagent/perception/: __init__.py  captioner.py  character_id.py  cinematography.py  dialogue_matcher.py  feature_extractor.py  flow_extractor.py  (+3 more)
tests/: __init__.py  conftest.py
tests/integration/: test_end_to_end.py  test_multi_source.py  test_perf.py  test_self_loop_evolution.py  test_trajectory_completeness.py
tests/training/: __init__.py  conftest.py  test_data.py  test_distill.py  test_env.py  test_rewards.py  test_runners.py  test_stages.py
tests/unit/: test_agents.py  test_arc_coherence.py  test_benchmark.py  test_cli.py  test_config.py  test_critic.py  test_director_feedback.py  test_ensemble_reward.py  test_generation_metrics.py  test_heuristic_differentiation.py  test_lessons.py  test_memory.py  test_models.py  test_orchestration.py  test_perception.py  test_preferences.py  test_prompts.py  test_reference_grounding.py  test_self_consistency.py  test_slide_trim.py  test_tools.py  test_trajectory.py
training/: README.md  __init__.py
training/env/: __init__.py  base.py  context_manager.py  editor_env.py
training/policy/: __init__.py  base.py  editor_policy.py
training/rewards/: __init__.py  composite.py  editing_quality_rm.py  hindsight.py
training/runners/: __init__.py  pipeline.py  rollout.py
training/scripts/: __init__.py  cli.py
training/stages/: __init__.py  _stub.py  distill.py  grpo.py  kto.py  sft.py
univa/: .env.example  README.md
(+40 files in other folders)
