[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "maestro"
version = "0.2.2"
description = "Training-free, self-improving, physically-grounded agentic video generation"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.23,<3.0",
    "pyyaml>=6.0,<7.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0,<9.0"]
server = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.27,<1.0",
    "pydantic>=2.5,<3.0",
]
image = ["pillow>=10.0,<12.0"]
all = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.27,<1.0",
    "pydantic>=2.5,<3.0",
    "pillow>=10.0,<12.0",
]

[project.scripts]
maestro = "maestro.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
