[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "maestro"
version = "0.4.0"
description = "Training-free, self-improving, physically-grounded agentic video generation"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.23,<3.0",
    "pyyaml>=6.0,<7.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0,<9.0"]
server = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.27,<1.0",
    "pydantic>=2.5,<3.0",
]
image = ["pillow>=10.0,<12.0"]
# Video decoding for the real C6 track extractor (cotracker/tapir). At least one
# of these must be importable for `_decode_frames` to read real mp4 frames.
video = ["opencv-python-headless>=4.8,<5.0", "imageio[ffmpeg]>=2.30,<3.0"]
# `all` = everything that is still CPU-only + pip-installable. Heavy GPU model
# backends (torch / cotracker / V-JEPA-2 / OmniWeaving / Wan) are intentionally
# NOT pinned here — install them yourself to match your CUDA, then flip the
# matching name in configs/*.yaml. See the "Going real" section in the README.
all = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.27,<1.0",
    "pydantic>=2.5,<3.0",
    "pillow>=10.0,<12.0",
    "opencv-python-headless>=4.8,<5.0",
    "imageio[ffmpeg]>=2.30,<3.0",
]

[project.scripts]
maestro = "maestro.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
